Corrected minor sytnax errors in the html file.

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
  /* || GENERAL STYLES */
  
- /*Colour pallet ourced from https://colorhunt.co/palette/a2d2fffef9efff865efee440 */
+ /*Colour pallet sourced from https://colorhunt.co/palette/a2d2fffef9efff865efee440 */
 
 :root {
   --blue: #A2D2FF;
